chat-space-front4

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,1 +1,11 @@
-%p<side bar>
+.side-bar
+ .side-bar__user-name
+  .top-items
+   .top-items__name name
+   .top-items__icons
+   =link_to"https://www.facebook.com/" do
+    = icon ('fas fa-edit')
+  -#   =link_to"https://www.facebook.com/", class: "top-items__icons " do
+  -# -#  =link_to"https://www.facebook.com/", class: "top-items__icons " do
+
+ .side-bar__group-list
