--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,3 +1,75 @@
 * {
   box-sizing: border-box;
 }
+
+.side-bar{
+  width: 300px;
+  height: 100vh;
+  display: inline-block;
+  float: left;
+
+  &__user-name{
+    background-color: #253141;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+    .top-items{
+      // background-color: #ffffff;
+      height: 20px;
+      width: 260px;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+
+    &__name{
+      height: 20px;
+      color: white;
+      text-align: left
+
+      }
+
+    &__icons{
+      text-align: right
+
+
+      }
+    }
+
+  &__group-list{
+    background-color: #2f3e51;
+    height: calc(100vh - 100px);
+    width: 300px;
+
+  }
+
+
+}
+
+.chat-main{
+  width: calc(100vw - 300px);
+  height: 100vh;
+  float: left;
+
+
+
+  &__group-list{
+    background-color: #ffffff;
+    height: 100px;
+  }
+
+  &__message-list{
+    background-color: #fafafa;
+    height: calc(100vh - 190px);
+
+  }
+
+  &__message-form{
+    background-color: #d2d2d2;
+    height: 90px;
+
+  }
+
+}
