chat-space-front5

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,11 +1,13 @@
 .side-bar
- .side-bar__user-name
-  .top-items
-   .top-items__name name
-   .top-items__icons
-   =link_to"https://www.facebook.com/" do
-    = icon ('fas fa-edit')
-  -#   =link_to"https://www.facebook.com/", class: "top-items__icons " do
-  -# -#  =link_to"https://www.facebook.com/", class: "top-items__icons " do
-
- .side-bar__group-list
+  .side-bar__user-name
+    .top-items
+      %p.top-items__name
+        name
+      %ul.top-items__icons
+        %li
+          =link_to "#" do
+            =icon('fas', 'edit', class: 'icon')
+        %li
+          =link_to"#" do
+            =icon('fas','fas fa-cog')
+  .side-bar__group-list
