--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -5,7 +5,7 @@
 .side-bar{
   width: 300px;
   height: 100vh;
-  display: inline-block;
+  // display: inline-block;
   float: left;
 
   &__user-name{
@@ -21,18 +21,23 @@
       // background-color: #ffffff;
       height: 20px;
       width: 260px;
-      flex-wrap: wrap;
-      justify-content: flex-start;
+      display: flex;
+      // flex-wrap: wrap;
+      // justify-content: flex-start;
 
     &__name{
-      height: 20px;
       color: white;
-      text-align: left
+      // text-align: left;
+      // justify-content: flex-end;
 
       }
 
     &__icons{
-      text-align: right
+      display: flex;
+      margin-left:auto;
+      .li{
+      text-align: right;
+      }
 
 
       }
