--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,3 +11,6 @@
           =link_to"#" do
             =icon('fas','fas fa-cog')
   .side-bar__group-list
+    .group-box
+      %p.group-name tech-expert
+      %p.group-message no message
