--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,4 +1,22 @@
 .chat-main
   .chat-main__group-list
+    .group-name
+      %p test
+    .group-member
+      %p member
+    .group-edit
+      %p edit
   .chat-main__message-list
+    -# -# .post-name
+    -#   .name
+    -#     %p 2019/12/18(Wed) 00:55:22
+    -#   .post
+    -#     %p text
+    .post-name
+      .name
+        %p name
+        .date
+          %p 2019/12/18(Wed) 00:55:22
+      .post
+        %p text
   .chat-main__message-form
