--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -133,6 +133,7 @@
       .name p{
         font-size: 16px;
         display: inline;
+        font-weight: bold;
 
       }
       .date{
@@ -146,6 +147,10 @@
           color: #999999;
         }
       .post{
+        font-size: 14px;
+        color: #434a54;
+        display: inline;
+        margin-bottom: 10px;
 
       }
 
