--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -7,11 +7,13 @@
     .group-edit
       %p edit
   .chat-main__message-list
-    -# -# .post-name
-    -#   .name
-    -#     %p 2019/12/18(Wed) 00:55:22
-    -#   .post
-    -#     %p text
+    .post-name
+      .name
+        %p name
+        .date
+          %p 2019/12/18(Wed) 00:55:22
+      .post
+        %p text
     .post-name
       .name
         %p name
@@ -20,3 +22,6 @@
       .post
         %p text
   .chat-main__message-form
+    .input-box
+      .input-box__image
+    .form-btn
