--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -4,8 +4,8 @@
       %p test
     .group-member
       %p member
-    .group-edit
-      %p edit
+    .group-edit{:type => "submit",:href=>"#"}
+      %p Edit
   .chat-main__message-list
     .post-name
       .name
@@ -22,6 +22,10 @@
       .post
         %p text
   .chat-main__message-form
-    .input-box
-      .input-box__image
-    .form-btn
+    .form
+      %input{:type =>"text",:placeholder =>"type a message" ,:method =>"post",:class=>"input",:size =>"0.9rem"}
+        .input-box__image
+          =link_to "#" do
+            =icon('far', 'image', class: 'fa-image')
+    .form-btn{:type => "submit"}
+      %p Send
