--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,5 +12,5 @@
             =icon('fas','fas fa-cog')
   .side-bar__group-list
     .group-box
-      %p.group-name tech-expert
-      %p.group-message no message
+      %p.group-box__group-name tech-expert
+      %p.group-box__group-message no message
