chat-space-front8

--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -193,6 +193,10 @@
           top: 32.5px;
           right: 10px;
         }
+        .file-upload{
+          display:none;
+        }
+        // .input-box__image{}
     .form-btn{
       width: 100px;
       height: 50px;
