--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -23,9 +23,10 @@
         %p text
   .chat-main__message-form
     .form
-      %input{:type =>"text",:placeholder =>"type a message" ,:method =>"post",:class=>"input",:size =>"0.9rem"}
-        .input-box__image
-          =link_to "#" do
+      %input{:type =>"text",:placeholder =>"type a message" ,:class=>"input"}
+        .input-box__image{type: "file",:class =>"input-box__image"}
+          %label{class: "input-box__image"}
             =icon('far', 'image', class: 'fa-image')
+            %input{type: "file",class: "file-upload"}
     .form-btn{:type => "submit"}
       %p Send
