chat-space-front10

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -23,7 +23,7 @@
         %p text
   .chat-main__message-form
     .form
-      %input{:type =>"text",:placeholder =>"type a message" ,:class=>"input"}
+      %input{type: "text",placeholder: "type a message" ,class: "input"}
         .input-box__image{type: "file",:class =>"input-box__image"}
           %label{class: "input-box__image"}
             =icon('far', 'image', class: 'fa-image')
