--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -181,6 +181,7 @@
         height: 50px;
         display: block;
         margin:20px 0px 20px 40px;
+        padding: 0 40px 0 10px;
          }
         .fa-image{
           font-size: 25px;
