chat-space-front2

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -4,7 +4,7 @@
       %p test
     .group-member
       %p member
-    .group-edit{:type => "submit",:href=>"#"}
+    .group-edit{type: "submit",href:"#"}
       %p Edit
   .chat-main__message-list
     .post-name
