--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,5 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   %body
+    = render 'layouts/notification'
     = yield
