--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,14 @@
   .side-bar__user-name
     .top-items
       %p.top-items__name
-        name
+        = current_user.name
       %ul.top-items__icons
         %li
           =link_to "#" do
             =icon('fas', 'edit', class: 'icon')
         %li
-          =link_to"#" do
-            =icon('fas','fas fa-cog')
+          =link_to edit_user_path(current_user) do
+            =icon('fas','fas fa-cog',class: 'icon')
   .side-bar__group-list
     .group-box
       %p.group-box__group-name tech-expert
