--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,6 @@
 @import "./reset";
 @import "config/colors";
 @import "modules/flash";
+@import "modules/group";
 @import "messages";
 @import "user";
