--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -11,6 +11,10 @@
           =link_to edit_user_path(current_user) do
             =icon('fas','fas fa-cog',class: 'icon')
   .side-bar__group-list
-    .group-box
-      %p.group-box__group-name tech-expert
-      %p.group-box__group-message まだメッセージがありません
+    - current_user.groups.each do |group|
+      .group-box
+        = link_to '#' do
+          %p.group-box__group-name
+            = group.name
+          %p.group-box__group-message
+            メッセージはまだありません。
