--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,28 +1,17 @@
--# .messages
--#   = render @messages
 .chat-main
   .chat-main__group-list
     .group-name
-      = group.name
+      %p name
     .group-member
-      -# = group.
+      %p member
     .group-edit{type: "submit",href:"#"}
       %p Edit
   .chat-main__message-list
-    .post-name
-      .name
-        = message.user.name
-        .date
-          = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-      .post
-        - if message.content.present?
-        %p.lower-message__content
-          = message.content
-        = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+    = render @messages
   .chat-main__message-form
     .form
       = form_for [@group, @message] do |f|
-        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        = f.text_field :body, class: 'form__message', placeholder: 'type a message'
         .form__mask
           = f.label :image, class: 'form__mask__image' do
             = icon('fas', 'image', class: 'icon')
