--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -117,6 +117,9 @@
       border: solid 1px #38aef0;
       color: #38aef0;
       cursor: pointer;
+      .edit-link{
+        text-decoration: none;
+      }
       }
 
     }
