--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -129,6 +129,7 @@
       width: calc(100vw - 300px);
       padding:35px 40px 40px 40px;
       background-color: #fafafa;
+      overflow: scroll;
 
     .post-name{
       width: calc(100vw - 380px);
