--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -86,8 +86,7 @@
       padding: 0px 40px;
 
       .group-name{
-      height: 20px;
-      width: 80px;
+      display:inline-block;
       position: relative;
       top: 35px;
       font-size: 20px;
@@ -95,10 +94,9 @@
       }
 
       .group-member{
-      height: 12px;
-      width: 80px;
+      display:inline-block;
       position: relative;
-      top: 60px;
+      top: 45px;
       font-size: 12px;
       color: #999999;
       text-align: left;
