--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,9 @@
-.post-name{"data-message-id": "#{message.id}"}
+.post-name
   .name
     = message.user.name
   .date
     = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-  .post
+  .post{"data-message-id": "#{message.id}"}
     - if message.body.present?
       .lower-message__content
         = message.body
