--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -133,6 +133,7 @@
       width: calc(100vw - 380px);
       display: inline-block;
       margin-bottom: 46px;
+      overflow: scroll;
 
       }
 
