--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -132,42 +132,39 @@
     .post-name{
       width: calc(100vw - 380px);
       display: inline-block;
-      margin-bottom: 46px;
+      margin-bottom: 12px;
       overflow: scroll;
 
       }
 
       .name{
         margin-bottom: 10px;
-      }
-      .name p{
         font-size: 16px;
         display: inline;
         font-weight: bold;
-        color: #434a54;
-
+        color: #333333;
       }
       .date{
         display: inline;
+        font-size: 12px;
+        vertical-align: top;
+        margin-left: 5px;
+        color: #999999;
+        font-weight: normal;
 
       }
-        .date p{
-          font-size: 12px;
-          vertical-align: top;
-          margin-left: 5px;
-          color: #999999;
-          font-weight: normal;
-        }
-      .post{
+    .post{
+        width: calc(100vw - 380px);
         display: block;
         font-size: 14px;
         color: #434a54;
+        margin-bottom: 46px;
         .lower-message__content{
           display: block;
         }
 
 
-      }
+    }
 
   }
 
